# src/monitoring/server.ts
@@ -3,12 +3,16 @@ import * as cors from "cors";
 import { createServer } from "http";
 import { Server } from "net";
 import { getRiderReport } from "./monitor";
+import * as swaggerUI from "swagger-ui-express"
+
+const swaggerSpec = require('../../swagger/monitoring.json');
 
 const PORT = process.env["MONITORING_PORT"] || 3002;
 
 const app = express();
 app.set("port", PORT);
 app.use(cors());
+app.use("/documentations", swaggerUI.serve, swaggerUI.setup(swaggerSpec));
 
 // routing
 app.get("/report/:rider_id", getRiderReport);
