# swagger/monitoring.json
@@ -2,7 +2,7 @@
     "swagger": "2.0",
     "info": {
         "title": "Score Service",
-        "descripition": "Service melakukan scoring pada driver.",
+        "descripition": "Service melihat report pada driver.",
         "termsOfService": "sanbercode.com",
         "contact":{
             "name": "Hilmi",
@@ -14,7 +14,7 @@
         },
         "version": "1.0.0"
     },
-    "host": "localhost:3003",
+    "host": "localhost:3002",
     "schemes": [
         "http"
     ],
@@ -25,14 +25,57 @@
         "application/json"
     ],
     "definitions": {
-        "score": {
+        "monitor": {
             "types": "object",
             "properties": {
                 "ok": {
                     "type": "boolean"
                 },
+                "position": {
+                    "type": "object",
+                    "properties": {
+                        "ok": {
+                            "type": "boolean"
+                        },
+                        "latitude": {
+                            "type": "number"
+                        },
+                        "longitude": {
+                            "type": "number"
+                        }
+                    }
+                },
+                "logs": {
+                    "type": "object",
+                    "properties": {
+                        "time": {
+                            "type": "string",
+                            "format": "date"
+                        },
+                        "east": {
+                            "type": "number"
+                        },
+                        "west": {
+                            "type": "number"
+                        },
+                        "north": {
+                            "type": "number"
+                        },
+                        "south": {
+                            "type": "number"
+                        }
+                    }
+                },
                 "point": {
-                    "type": "number"
+                    "type": "object",
+                    "properties": {
+                        "ok": {
+                            "type": "boolean"
+                        },
+                        "point": {
+                            "type": "number"
+                        }
+                    }
                 }
             }
         },
@@ -56,7 +99,7 @@
         }
     ],
     "paths": {
-        "/point/{rider_id}": {
+        "/report/{rider_id}": {
             "get": {
                 "parameters": [ {
                     "name": "rider_id",
@@ -66,7 +109,7 @@
                 }
                 ],            
                 "tags": [
-                    "score"
+                    "monitoring"
                 ],
                 "description": "API untuk mengambil data score suatu driver.",
                 "produces": [
@@ -77,7 +120,7 @@
                         "description": "Data score dari suatu driver.",
                         "schemes": {
                             "type": "object",
-                            "$ref": "#/definitions/score"
+                            "$ref": "#/definitions/monitor"
                         }
                     },
                     "400": {
